selfhost/test/parser/functiondecl_error_no_body.out
Error at %FILE_NAME%:2:1
Unexpected token 'func':
  |  func stubbedFunc2(): String
     ^